fix download link spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -502,3 +502,7 @@ a img {
 #book_index {
     margin-top: 10px;
 }
+
+.pdf-item-dl {
+    margin-left: 17px;
+}
